--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./src/repl.js",
   "dependencies": {
-    "chalk": "^5.0.1",
+    "chalk": "4.1.2",
     "gradient-string": "^2.0.1",
     "inquirer": "^8.2.2"
   },
